[package]
name = "dft200ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1.18.2", features = ["full"] }
clap = { version = "3.1.*", features = ["derive"] }
btleplug = { version = "~0.9.2" }
futures = { version = "~0.3.21", features = ["async-await"] }
itertools = { version = "~0.10.3" }
lazy_static = "1.4.*"
tracing = { version = "~0.1.34" }
env_logger = "~0.9.0"
uuid = "0.8.2" # needs to be the same as in btleplug
